# test-task-stakewolle

./: .env  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: b58ee3d641e1_add_referal_code_expiration.py  e8767bc2eae7_initial.py  f7d78f5ec336_add_referal.py
app/: main.py
app/api/: __init__.py  urls.py
app/api/endpoints/: __init__.py  create_referal.py  delete_referal.py  get_referal.py  get_refers.py  login.py  me.py  registration.py
app/core/: config.py
app/crud/: __init__.py  crud_user.py
app/db/: session.py
app/models/: user.py
app/redis/: redis.py
app/schemas/: __init__.py  referal.py  token.py  user.py
app/utils/: get_current_user.py  jwt.py  referal.py
